# fledge-south-iec104

./: .clang-format  .gitignore  CMakeLists.txt  Description  FindFledge.cmake  Package  README.md  README.rst  additional_lib.version  fledge.version  iec104.cpp  iec104_client.cpp  iec104_client_config.cpp  iec104_client_connection.cpp  iec104_client_redgroup.cpp  plugin.cpp  requirements.sh
.github/workflows/: ci.yml  publish-fromdev  publish-fromdev.yml  publish.yml  qualityscan.yml
cmake/: CodeCoverage.cmake
dco-signoffs/: EstelleChigot-dco-signoff.txt  LucasBarret-dco-signoff.txt  RemiChauchadis-dco-signoff.txt
include/: adl_serializer.hpp  byte_container_with_subtype.hpp  iec104.h  iec104_client.h  iec104_client_config.h  iec104_client_connection.h  iec104_client_redgroup.h  iec104_utility.h  json.hpp  json_fwd.hpp  ordered_map.hpp
include/detail/: exceptions.hpp  hash.hpp  json_pointer.hpp  json_ref.hpp  macro_scope.hpp  macro_unscope.hpp  string_escape.hpp  value_t.hpp
include/detail/conversions/: from_json.hpp  to_chars.hpp  to_json.hpp
include/detail/input/: binary_reader.hpp  input_adapters.hpp  json_sax.hpp  lexer.hpp  parser.hpp  position_t.hpp
include/detail/iterators/: internal_iterator.hpp  iter_impl.hpp  iteration_proxy.hpp  iterator_traits.hpp  primitive_iterator.hpp
include/detail/meta/: cpp_future.hpp  detected.hpp  identity_tag.hpp  is_sax.hpp  type_traits.hpp  void_t.hpp
include/detail/meta/call_std/: begin.hpp  end.hpp
include/detail/output/: binary_writer.hpp  output_adapters.hpp  serializer.hpp
src/: iec104.cpp  iec104_client.cpp  iec104_client_config.cpp  iec104_client_connection.cpp  iec104_client_redgroup.cpp  plugin.cpp
tests/: CMakeLists.txt  README.rst  conf_init.h  main.cpp  test_PrepareParameters.cpp  test_asdu_handler.cpp  test_asdu_handler.cpp.wip  test_config.cpp  test_connection_handling.cpp  test_control_commands.cpp  test_getConfigValue.cpp  test_iec104.cpp  test_info.cpp  test_interrogation.cpp  test_legacy_conn_handling.cpp  test_plugin.cpp  test_sendInterrogationCommands.cpp  test_sendInterrogationToCa.cpp  test_start.cpp  test_time_sync.cpp  test_utility.cpp
